--- a/assets/less/components/accordion.less
+++ b/assets/less/components/accordion.less
@@ -216,9 +216,9 @@
   font-size: 22px!important;
   font-weight: bold;
   flex: 1;
-
-  //width: 100px;
-  //background-color: blue;
+  .breakpoint-small-down({
+    font-size: 16px!important;
+  });
 }
 
 
