--- a/assets/less/components/navbar.less
+++ b/assets/less/components/navbar.less
@@ -248,7 +248,7 @@
   }
 
   div.search{
-    background: white!important;
+    background: white;
   }
 }
 
@@ -263,14 +263,14 @@
 }
 
 .full-width .close-search{
-  background: white url("../../assets/images/close.svg") center no-repeat;
+  background: white url("../../assets/images/close.svg") top center no-repeat;
   background-size: 22px;
-  width: 22px;
-  height: 22px;
-  padding: 0 0px 10px 10px;
+  width: 60px;
+  height: 50px;
+  //padding: 0 0px 10px 10px;
   position: absolute;
   top: -50px;
-  right: 50px;
+  right: 20px;
   cursor: pointer;
   .breakpoint-laptop-down({
     right: 30px;
