--- a/assets/less/pages/contact.less
+++ b/assets/less/pages/contact.less
@@ -16,6 +16,10 @@
   }
   .profile-image{
     margin-right: 10px;
+    .breakpoint-small-down({
+      margin-right: 0;
+      margin-bottom: 20px;
+    });
   }
   img{
     border-radius: 10px;
