--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -101,8 +101,9 @@ button:not(:disabled) {
     padding-bottom: 10px;
     font-weight: bold;
     .breakpoint-small-down({
-      padding-left: 20px;
-      padding-right: 20px;
+      padding-left: 15px;
+      padding-right: 15px;
+      white-space: nowrap;
     });
   &.green_btn{
     background: @green-color;
