--- a/assets/less/components/card.less
+++ b/assets/less/components/card.less
@@ -34,11 +34,11 @@
   &:hover{
     background-color: @link-color!important;
   }
-  //.breakpoint-small-down({
-  //  width: 150px!important;
-  //  height: 150px!important;
-  //  background-size: 60px!important;
-  //})
+  .breakpoint-small-down({
+    width: 150px!important;
+    height: 150px!important;
+    background-size: 60px!important;
+  })
 }
 
 .newsletters,
