--- a/assets/less/pages/library.less
+++ b/assets/less/pages/library.less
@@ -1,7 +1,7 @@
 .library-items{
-  .breakpoint-large-down({
-    margin-top: 150px;
-  })
+  //.breakpoint-large-down({
+  //  margin-top: 150px;
+  //})
 }
 .library-item{
   background: #efefef;
@@ -160,7 +160,7 @@
     .breakpoint-huge-down({
       flex-direction: column;
       justify-content: space-around;
-      width: 70%;
+      width: 100%;
 
     });
   }
@@ -179,6 +179,9 @@
     height: 340px;
     object-fit: cover;
     margin-bottom: 20px;
+    .breakpoint-small-down({
+      width: 100%;
+    });
   }
 
   .download-gallery{
@@ -192,7 +195,7 @@
     border-radius: 10px;
     color: white;
     .breakpoint-small-down({
-      right: -1px;
+      right: 8px;
     });
     &:hover{
       opacity: 0.8;
