--- a/assets/less/pages/contact.less
+++ b/assets/less/pages/contact.less
@@ -15,11 +15,12 @@
     margin-top: 20px;
   }
   .profile-image{
-    margin-right: 10px;
-    .breakpoint-small-down({
-      margin-right: 0;
-      margin-bottom: 20px;
-    });
+    margin-bottom: 20px;
+    //margin-right: 10px;
+    //.breakpoint-small-down({
+    //  margin-right: 0;
+    //  margin-bottom: 20px;
+    //});
   }
   img{
     border-radius: 10px;
@@ -32,10 +33,12 @@
 
   .contact-info{
     font-size: 18px;
-    display: flex;
+    display: inline-flex;
     flex-direction: row;
     justify-content: left;
-    align-items: center;
+    align-items: self-start;
+    width: 100%;
+    margin-bottom: 10px;
     color: #5D5D5D!important;
     i{
       color: @default-color!important;
@@ -47,6 +50,19 @@
       word-break: break-all;
     })
   }
+
+  .contact-info:nth-of-type(1){
+    i{
+      margin-top: 2px;
+    }
+  }
+  .contact-info:nth-of-type(2),
+  .contact-info:nth-of-type(3){
+    i{
+      margin-top: -4px;
+    }
+  }
+
   .profile-description{
     margin-top: 20px;
   }
