--- a/partials/memberslist.htm
+++ b/partials/memberslist.htm
@@ -24,8 +24,9 @@
 			{{profile.content|raw}}
 		</div>
 		<div class="col-lg-3 col-sm-6 col-xs-12 mb-2">
-			<h4>Working Group</h4>
-			{{wg.getWG(profile.category_id).name}}
+			<h4>Working Groups</h4>
+			<!--{{wg.getWG(profile.category_id).name}}-->
+			{{profile.position}}
 		</div>
 		<div class="col-lg-3 col-sm-6 col-xs-12 mb-2">
 			<h4>Country</h4>
