homepage logo fix

--- a/assets/less/themes/master.less
+++ b/assets/less/themes/master.less
@@ -111,12 +111,14 @@ h1.display-1{
             //width: 1146px;
             //text-align: center;
             &.home-page-header{
-              font-size: 70px;
+              font-size: 66px;
               font-weight: 600;
-              line-height: 85px;
+              line-height: 75px;
               color: @default-color;
               text-transform: uppercase;
               font-weight: bold;
+              white-space: nowrap;
+              margin-top: 70px;
               .breakpoint-laptop-down({
                 font-size: 60px;
                 line-height: 60px;
