--- a/assets/less/components/navbar.less
+++ b/assets/less/components/navbar.less
@@ -515,15 +515,17 @@ nav .pr.p-search.large.search-btn{
     list-style-type: none!important;
     font-size: 0.8em;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     padding-left: 0;
 
     li{
       padding-right: 0!important;
       padding-top: 0!important;
-      margin-top: 0;
+      margin-top: 0!important;
+      margin-bottom: 0px;
       a{
         font-size: 18px!important;
+        color: #c1c1c1;
       }
     }
   }
