--- a/assets/less/pages/internal-documents.less
+++ b/assets/less/pages/internal-documents.less
@@ -593,3 +593,120 @@ a:hover .arrow-left{
   }
 
 }
+
+
+
+/*  external documents */
+
+.external-documents, .documents-search{
+
+  h4{
+    text-transform: none;
+  }
+  .accordion-toggle{
+    border-radius: 10px;
+    border: 1px solid #C1C1C1;
+    padding: 20px !important;
+    margin: 0!important;
+    cursor: pointer;
+    width: 100%;
+    background: #F0F0F0;
+    color: #555555;
+    font-size: 20px;
+    font-weight: normal;
+    text-transform: none;
+  }
+
+  .plusminus{
+    width: 17px;
+    height: 17px;
+    position: relative;
+    display: inline-block;
+  }
+
+  .plus{
+    background: url(../../assets/images/expand.svg) left no-repeat;
+    width: 18px;
+    height: 18px;
+    position: relative;
+    display: inline-block;
+    top: 4px;
+    left: 1px;
+  }
+  .minus{
+    background: url(../../assets/images/colapse.svg) left no-repeat;
+    width: 18px;
+    height: 18px;
+    position: relative;
+    display: inline-block;
+    top: 4px;
+    left: 1px;
+  }
+
+  .accordion-toggle.subfolder_photos, .accordion-toggle.subfolder_files{
+    border: none;
+    background: url('@{slick-loader-path}folder.svg') left no-repeat;
+    background-size: 33px;
+    padding-left: 42px!important;
+    border-radius: unset!important;
+    border: none;
+    border-radius: 5px;
+    padding: 0 0 0 42px !important;
+    margin: 0 0 20px 0!important;
+    font-size: 1em;
+    cursor: pointer;
+    width: 100%;
+    //background: #ffffff;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+
+
+
+
+  .row.middle-xs.between-xs .search {
+      background: @white-color;
+      position: relative;
+      top: unset;
+      width: auto;
+      height: 42px;
+      /* max-width: 1600px; */
+      left: 0;
+      right: 0;
+      z-index: 11;
+
+      &.form-control{
+        display: block;
+        width: 100%;
+        height: 30px;
+        font-size: 18px;
+        color: #122642;
+        background-color: #ffffff;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        border: 1px solid #d1d1d1!important;
+        border-right: 0!important;
+        padding: 5px 10px;
+      }
+
+      .text-grey {
+        color: #495a62;
+        line-height: 42px;
+      }
+  }
+
+  .all_images_container .documents_images_list:hover{
+    cursor: unset;
+  }
+
+  .search-btn{
+      margin-right: 20px;
+      cursor: pointer;
+  }
+
+  .depth_1, .depth_2, .depth_3, .depth_4, .depth_5, .depth_6, .depth_7{
+    margin-left: 32px;
+  }
+
+}
