--- a/partials/site/footer.htm
+++ b/partials/site/footer.htm
@@ -46,7 +46,7 @@ theme = "dark-bottom"
 			</div>
 			<div class="col-xs-12 col-lg-2 col-md-4 start-md center-xs col-sm-6 start-sm">
 				{% if (enable_social_media) %}
-				<div class="head">Follow U3G</div>
+				<div class="head">Follow us</div>
 				<div class="social-networks">
 					<div class="icons mt-1">
 						{% if enable_facebook and facebook_url %}
