--- a/assets/less/themes/master.less
+++ b/assets/less/themes/master.less
@@ -359,9 +359,11 @@ h1.display-1{
         width: 70%;
       })
     }
+    .mail-icon{
+      width: 48px !important;
+      height: 48px !important;
+    }
     .icons{
-      width: 48px;
-      height: 48px;
       .breakpoint-small-down ({
         display: unset;
       });
@@ -453,6 +455,7 @@ h1.display-1{
   })
 }
 .subscribe_holder_bg{
+
   background: url("../../assets/images/homepage.jpg") center no-repeat;
   background-size: cover;
 
