--- a/assets/less/themes/master.less
+++ b/assets/less/themes/master.less
@@ -316,19 +316,54 @@ h1.display-1{
 
     .funding {
         display: flex;
-        flex: 1 1 14%;
-        color: @footer-text-color;
-        font-size: 18px!important;
-        max-width: 100px;
+        color: #ffffff;
+        font-size: 12px !important;
+        line-height: 20px;
+        flex-direction: column;
+        font-weight: bold;
+        .funds_flag{
+            display: flex;
+            flex-direction: row;
+            justify-content: left;
+            margin-top: 20px;
+            align-items: center;
+            img{
+                height:40px;
+                float: left;
+                margin-right: 10px;
+                margin-left: 48px!important;
+                width: auto;
+            }
+        }
+        img{
+            width: auto;
+            margin-left: 20px;
+        }
     }
     .cost {
         display: flex;
-        flex: 1 1 14%;
+        flex-direction: column;
+        justify-content: space-between;
+        //flex: 1 1 14%;
         color: @footer-text-color;
-        font-size: 18px!important;
-      img{
-        margin-right: 20px;
-      }
+        font-size: 12px!important;
+        line-height: 18px;
+        &.action_details{
+            line-height: 24px;
+        }
+        .title{
+            color: #e6762f;
+            font-size: 15px!important;
+            text-transform: uppercase;
+        }
+        .links{
+            display: flex;
+            margin-top: 20px;
+            a{
+                font-size: 12px!important;
+                margin-right: 20px;
+            }
+        }
 
     }
     .powered-by {
@@ -336,7 +371,7 @@ h1.display-1{
         flex: 1 0 auto;
         justify-content: center;
         color: @footer-text-color;
-        font-size: 14px!important;
+        font-size: 12px!important;
         white-space: nowrap;
         .breakpoint-small-down ({
           font-size: 12px!important;
