--- a/assets/less/themes/master.less
+++ b/assets/less/themes/master.less
@@ -355,6 +355,9 @@ h1.display-1{
             color: #e6762f;
             font-size: 15px!important;
             text-transform: uppercase;
+            .breakpoint-large-down({
+                margin-top: 40px;
+            });
         }
         .links{
             display: flex;
